# Sat-xml

./: .gitignore  README.md  pyproject.toml
docs/: BORRADOR.md  DASHBOARD_CEO.md  DESCARGA_AUTOMATICA.md  FLUJO_HUMANO_IA.md  INVESTIGACION_MERCADO.md  PRESENTACION_VENTAJAS.md  STACK_Y_UI.md
examples/: .env.example
export/contpaqi_add/: README.md
export/pdf/: README.md
export/reportes/: README.md
fiel/: README.md
listas/: README.md
sat_xml/: __init__.py  __main__.py  api.py  auth.py  cli.py  client.py  descarga.py  empresas.py  estado.py  fiel.py  inventario.py  metadata.py  models.py  particion.py  pdf.py  preflight.py  progreso.py  retenciones.py  scheduler.py  soap.py  solicitud.py  verificacion.py
sat_xml/auditoria/: __init__.py  cancelados.py  faltantes.py  lista_69b.py
sat_xml/dashboard/: __init__.py  ceo.py  reglas_deduccion.py
sat_xml/exportadores/: __init__.py  contpaqi_add.py
sat_xml/reportes/: __init__.py  excel_csv.py
tests/: __init__.py  test_scaffold.py
web/: README.md
web/public/brand/: README.md
web/styles/: tokens.css.draft
